Corrected hidden class with bad contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -91,6 +91,12 @@ nav a {
 	font-size: 14px;
 }
 
+.visually-hidden {
+	opacity: 1;
+	color: rgb(255, 255, 255);
+	background-color: rgb(0, 0, 0);
+}
+
 #gallery {
 	/*	min-height: 100vh; */
 }
